# cpp-templates

./: .clang-format  .gitignore  CMakeLists.txt  README.md
observer/: CMakeLists.txt  Subject.h  main.cpp
registry/: Base.h  CMakeLists.txt  DerivedOne.h  DerivedTwo.h  Registry.h  main.cpp
registry2/: CMakeLists.txt  Registry.h  main.cpp
singleton/: CMakeLists.txt  Singleton.h  SomeClass.h  main.cpp
singleton2/: CMakeLists.txt  Singleton.h  SomeClass.h  main.cpp
